<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="8dp">


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textSize="28dp"/>

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textLight"
            android:textSize="12dp"
            android:text="215b4e910b754083b79ccab87f2b6986"
            android:layout_below="@id/name"/>









        <LinearLayout
            android:id="@+id/solo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:background="@color/bgLight"
            android:layout_below="@id/id">

            <LinearLayout
                android:id="@+id/header_solo"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:background="@drawable/yellow_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solo"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/textLight"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/header_size"/>

                <TextView
                    android:id="@+id/solo_matches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/textLight"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/header_value_size"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/solo_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/solo_wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/solo_kd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

        </LinearLayout>










        <LinearLayout
            android:id="@+id/duo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bgLight"
            android:layout_marginTop="16dp"
            android:layout_below="@id/solo">

            <LinearLayout
                android:id="@+id/header_duo"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:background="@drawable/green_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duo"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/textLight"
                    android:textSize="@dimen/header_size"/>

                <TextView
                    android:id="@+id/duo_matches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/textLight"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/header_value_size"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/duo_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/duo_wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/duo_kd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>
        </LinearLayout>









        <LinearLayout
            android:id="@+id/squads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bgLight"
            android:layout_marginTop="16dp"
            android:layout_below="@id/duo">

            <LinearLayout
                android:id="@+id/header_squads"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:background="@drawable/blue_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/squads"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/textWhite"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/header_size"/>

                <TextView
                    android:id="@+id/squads_matches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/textWhite"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/header_value_size"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kills"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="4dp"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/squads_kills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/squads_wins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kd"
                    android:layout_marginLeft="4dp"
                    android:layout_gravity="left|center_vertical"
                    android:textColor="@color/text"
                    android:textSize="@dimen/definition_size"/>

                <TextView
                    android:id="@+id/squads_kd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:textColor="@color/text"
                    android:layout_marginLeft="8dp"
                    android:textSize="@dimen/value_size"/>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>